EKS-TF/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: previselab
  labels:
    name: previselab
    project: super-mario
